# bot_telegram_geolocation_from_photo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build-lambda.sh  deploy.sh  set-webhook.sh  show-logs.sh
src/: app.rs  config.rs  exif_geo.rs  geocoder.rs  lib.rs  links.rs  main.rs  telegram.rs  wikimedia.rs
