[package]
name = "telegram-photo-geolocator-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Telegram bot that returns map links from photo EXIF GPS metadata."
repository = "https://github.com/vitaly-zdanevich/bot_telegram_geolocation_from_photo"

[dependencies]
anyhow = "1"
kamadak-exif = "0.5"
lambda_http = "1.2"
nom-exif = "3.6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
